--- a/src/HealthTracker/groups.fxml
+++ b/src/HealthTracker/groups.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIcon?>
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -38,12 +37,7 @@
                         <FontAwesomeIcon glyphName="USER" size="2em" />
                      </graphic>
                   </Button>
-                  <Button fx:id="btn_settings_close" layoutX="2.0" mnemonicParsing="false" onMouseClicked="#run2" prefHeight="64.0" prefWidth="78.0" style="-fx-background-color: white;">
-                     <graphic>
-                        <FontAwesomeIcon glyphName="CHEVRON_LEFT" size="2em" />
-                     </graphic>
-                  </Button>
-                  <Button fx:id="btn_settings" layoutX="2.0" mnemonicParsing="false" onMouseClicked="#run1" prefHeight="64.0" prefWidth="78.0" style="-fx-background-color: white;">
+                  <Button fx:id="btn_settings" layoutX="2.0" mnemonicParsing="false" onMouseClicked="#navigation" prefHeight="64.0" prefWidth="78.0" style="-fx-background-color: white;">
                      <graphic>
                         <FontAwesomeIcon glyphName="GEAR" size="2em" />
                      </graphic>
@@ -51,13 +45,6 @@
                </children>
             </AnchorPane>
          </bottom>
-         <left>
-            <AnchorPane fx:id="paneSlide" prefHeight="523.0" prefWidth="191.0" style="-fx-background-color: black;" BorderPane.alignment="CENTER">
-               <BorderPane.margin>
-                  <Insets top="28.0" />
-               </BorderPane.margin>
-            </AnchorPane>
-         </left>
          <top>
             <AnchorPane fx:id="banner" prefHeight="64.0" prefWidth="400.0" style="-fx-background-color: black;" BorderPane.alignment="CENTER">
                <children>
@@ -96,6 +83,15 @@
       <VBox fx:id="content_home" layoutY="63.0" prefHeight="572.0" prefWidth="405.0">
          <children>
             <Text fill="#545454" strokeType="OUTSIDE" strokeWidth="0.0" text="HOME HOME PAGEEEEEE" wrappingWidth="404.79996337890634">
+               <font>
+                  <Font name="System Italic" size="20.0" />
+               </font>
+            </Text>
+         </children>
+      </VBox>
+      <VBox fx:id="content_setting" layoutY="63.0" prefHeight="572.0" prefWidth="405.0">
+         <children>
+            <Text fill="#545454" strokeType="OUTSIDE" strokeWidth="0.0" text="SETTINGS" wrappingWidth="404.79996337890634">
                <font>
                   <Font name="System Italic" size="20.0" />
                </font>
