--- a/src/HealthTracker/settings.fxml
+++ b/src/HealthTracker/settings.fxml
@@ -13,9 +13,11 @@
 <?import javafx.scene.text.Text?>
 
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIcon?>
+<?import javafx.scene.layout.AnchorPane?>
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="HealthTracker.SettingsController">
    <children>
-      <Pane prefHeight="60.0" prefWidth="400.0" style="-fx-background-color: black;">
+      <Pane prefHeight="60.0" prefWidth="400.0" style="-fx-background-color: black;" >
          <children>
             <Text fill="#f88d00" layoutX="84.0" layoutY="40.0" strokeType="OUTSIDE" strokeWidth="0.0" text="TRACK">
                <font>
@@ -40,24 +42,24 @@
             <Image url="@montreal-28-round-mirror-glossy-white-mirror-james-martin-vanities-624641_1024x.jpg" />
          </graphic>
       </Chip>
-      <Button layoutX="135.0" layoutY="620.0" mnemonicParsing="false" prefHeight="41.0" prefWidth="131.0" text="Submit" />
+      <Button fx:id="submit" layoutX="135.0" layoutY="580.0" mnemonicParsing="false" prefHeight="41.0" prefWidth="131.0" text="Submit" onAction="#redirect"/>
       <Text layoutX="12.0" layoutY="259.0" strokeType="OUTSIDE" strokeWidth="0.0" text="TEXT TO SPEECH" wrappingWidth="149.0">
          <font>
             <Font name="System Bold" size="19.0" />
          </font>
       </Text>
-      <Separator layoutX="8.0" layoutY="273.0" prefHeight="13.0" prefWidth="379.0" />
-      <Chip layoutX="334.0" layoutY="285.0" prefWidth="123.0" style="-fx-background-color: green;">
+      <Separator layoutX="8.0" layoutY="285.0" prefHeight="13.0" prefWidth="379.0" />
+      <Chip  layoutX="334.0" layoutY="285.0" prefWidth="123.0" style="-fx-background-color: green;">
          <graphic>
             <Image url="@montreal-28-round-mirror-glossy-white-mirror-james-martin-vanities-624641_1024x.jpg" />
          </graphic>
       </Chip>
-      <Text layoutX="12.0" layoutY="308.0" strokeType="OUTSIDE" strokeWidth="0.0" text="LARGER FONT" wrappingWidth="149.0">
+      <Text layoutX="12.0" layoutY="314.0" strokeType="OUTSIDE" strokeWidth="0.0" text="LARGER FONT" wrappingWidth="149.0">
          <font>
             <Font name="System Bold" size="19.0" />
          </font>
       </Text>
-      <Separator layoutX="8.0" layoutY="318.0" prefHeight="13.0" prefWidth="379.0" />
+      <Separator layoutX="8.0" layoutY="327.0" prefHeight="13.0" prefWidth="379.0" />
       <Text layoutX="12.0" layoutY="358.0" strokeType="OUTSIDE" strokeWidth="0.0" text="LANGUAGE" wrappingWidth="149.0">
          <font>
             <Font name="System Bold" size="19.0" />
@@ -96,5 +98,32 @@
          </items>
       </DropdownButton>
       <Separator layoutX="8.0" layoutY="469.0" prefHeight="13.0" prefWidth="379.0" />
+      <AnchorPane prefHeight="64.0" prefWidth="400.0" layoutY="636.0">
+         <Button fx:id="btn_group" layoutX="327.0" mnemonicParsing="false" onAction="#redirect" prefHeight="64.0" prefWidth="78.0" style="-fx-background-color: white;">
+            <graphic>
+               <FontAwesomeIcon glyphName="GROUP" size="2em" text="" />
+            </graphic>
+         </Button>
+         <Button fx:id="btn_workouts" layoutX="248.0" mnemonicParsing="false" onAction="#redirect" prefHeight="64.0" prefWidth="78.0" style="-fx-background-color: white;">
+            <graphic>
+               <FontAwesomeIcon glyphName="BICYCLE" size="2em" text="" />
+            </graphic>
+         </Button>
+         <Button fx:id="btn_home" layoutX="160.0" mnemonicParsing="false" onAction="#redirect" prefHeight="64.0" prefWidth="88.0" style="-fx-background-color: white;">
+            <graphic>
+               <FontAwesomeIcon glyphName="HOME" size="2em" text="" />
+            </graphic>
+         </Button>
+         <Button fx:id="btn_user" layoutX="81.0" mnemonicParsing="false" onAction="#redirect" prefHeight="64.0" prefWidth="78.0" style="-fx-background-color: orange;">
+            <graphic>
+               <FontAwesomeIcon glyphName="USER" size="2em" />
+            </graphic>
+         </Button>
+         <Button fx:id="btn_settings" layoutX="2.0" mnemonicParsing="false" onAction="#redirect" prefHeight="64.0" prefWidth="78.0" style="-fx-background-color: white;">
+            <graphic>
+               <FontAwesomeIcon glyphName="GEAR" size="2em" />
+            </graphic>
+         </Button>
+      </AnchorPane>
    </children>
 </Pane>
