--- a/src/HealthTracker/exercise.fxml
+++ b/src/HealthTracker/exercise.fxml
@@ -42,7 +42,7 @@
     <Button fx:id="kmB" layoutX="350" layoutY="420" onMousePressed="#km" text="KM"></Button>
     <Text layoutX="40" layoutY="500" text="Steps"></Text>
     <TextField fx:id="steps" layoutX="40" layoutY="520"/>
-    <Button fx:id="submit" layoutX="135.0" layoutY="580.0" mnemonicParsing="false" prefHeight="41.0" prefWidth="131.0" text="Submit" onAction="#redirect"/>
+    <Button fx:id="submit" layoutX="135.0" layoutY="580.0" mnemonicParsing="false" prefHeight="41.0" prefWidth="131.0" text="Submit" onAction="#handleSubmit"/>
 
 
 
