datadisplay dummy data changed to match constructor

--- a/src/HealthTracker/groups.fxml
+++ b/src/HealthTracker/groups.fxml
@@ -12,40 +12,7 @@
 <?import javafx.scene.text.Text?>
 
 <AnchorPane prefHeight="700.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="HealthTracker.GroupsController">
-   <children>
-      <BorderPane prefHeight="700.0" prefWidth="400.0">
-         <bottom>
-            <AnchorPane prefHeight="64.0" prefWidth="400.0" BorderPane.alignment="CENTER">
-               <children>
-                  <Button fx:id="btn_group" layoutX="327.0" mnemonicParsing="false" onMouseClicked="#navigation" prefHeight="64.0" prefWidth="78.0" style="-fx-background-color: white;">
-                     <graphic>
-                        <FontAwesomeIcon glyphName="GROUP" size="2em" text="" />
-                     </graphic>
-                  </Button>
-                  <Button fx:id="btn_workouts" layoutX="248.0" mnemonicParsing="false" onMouseClicked="#navigation" prefHeight="64.0" prefWidth="78.0" style="-fx-background-color: white;">
-                     <graphic>
-                        <FontAwesomeIcon glyphName="BICYCLE" onMouseClicked="#navigation" size="2em" text="" />
-                     </graphic>
-                  </Button>
-                  <Button fx:id="btn_home" layoutX="160.0" mnemonicParsing="false" onMouseClicked="#navigation" prefHeight="64.0" prefWidth="88.0" style="-fx-background-color: orange;">
-                     <graphic>
-                        <FontAwesomeIcon glyphName="HOME" size="2em" text="" />
-                     </graphic>
-                  </Button>
-                  <Button fx:id="btn_user" layoutX="81.0" mnemonicParsing="false" onMouseClicked="#navigation" prefHeight="64.0" prefWidth="78.0" style="-fx-background-color: white;">
-                     <graphic>
-                        <FontAwesomeIcon glyphName="USER" size="2em" />
-                     </graphic>
-                  </Button>
-                  <Button fx:id="btn_settings" layoutX="2.0" mnemonicParsing="false" onMouseClicked="#navigation" prefHeight="64.0" prefWidth="78.0" style="-fx-background-color: white;">
-                     <graphic>
-                        <FontAwesomeIcon glyphName="GEAR" size="2em" />
-                     </graphic>
-                  </Button>
-               </children>
-            </AnchorPane>
-         </bottom>
-         <top>
+
             <AnchorPane fx:id="banner" prefHeight="64.0" prefWidth="400.0" style="-fx-background-color: black;" BorderPane.alignment="CENTER">
                <children>
                   <Text fx:id="title" fill="#ff660e" layoutX="14.0" layoutY="45.0" strokeType="OUTSIDE" strokeWidth="0.0" text="TRACK">
@@ -60,8 +27,6 @@
                   </Text>
                </children>
             </AnchorPane>
-         </top>
-      </BorderPane>
       <VBox fx:id="content_group" layoutY="63.0" prefHeight="572.0" prefWidth="405.0">
          <children>
             <Text fill="#545454" strokeType="OUTSIDE" strokeWidth="0.0" text="Groups" wrappingWidth="404.79996337890634">
@@ -112,7 +77,7 @@
          <content>
             <VBox prefHeight="622.0" prefWidth="391.0">
                <children>
-                  <Button alignment="TOP_LEFT" mnemonicParsing="false" onMouseClicked="#back" prefHeight="26.0" prefWidth="114.0" style="-fx-background-color: #66000000;" text="&lt; back" />
+                  <Button alignment="TOP_LEFT" mnemonicParsing="false" prefHeight="26.0" prefWidth="114.0" style="-fx-background-color: #66000000;" text="&lt; back" />
                   <Text fx:id="groupDetails_Name" fill="#ea7434" strokeType="OUTSIDE" strokeWidth="0.0" text="TRACK">
                      <font>
                         <Font name="System Bold" size="33.0" />
@@ -192,5 +157,31 @@
             </VBox>
          </content>
       </ScrollPane>
-   </children>
+<AnchorPane prefHeight="64.0" prefWidth="400.0" BorderPane.alignment="CENTER" layoutY="636">
+   <Button fx:id="btn_group" layoutX="327.0" mnemonicParsing="false" onAction="#navigation" prefHeight="64.0" prefWidth="78.0" style="-fx-background-color: white;">
+      <graphic>
+         <FontAwesomeIcon glyphName="GROUP" size="2em" text="" />
+      </graphic>
+   </Button>
+   <Button fx:id="btn_workouts" layoutX="248.0" mnemonicParsing="false" onAction="#navigation" prefHeight="64.0" prefWidth="78.0" style="-fx-background-color: white;">
+      <graphic>
+         <FontAwesomeIcon glyphName="BICYCLE" onMouseClicked="#navigation" size="2em" text="" />
+      </graphic>
+   </Button>
+   <Button fx:id="btn_home" layoutX="160.0" mnemonicParsing="false" onAction="#navigation" prefHeight="64.0" prefWidth="88.0" style="-fx-background-color: orange;">
+      <graphic>
+         <FontAwesomeIcon glyphName="HOME" size="2em" text="" />
+      </graphic>
+   </Button>
+   <Button fx:id="btn_user" layoutX="81.0" mnemonicParsing="false" onAction="#navigation" prefHeight="64.0" prefWidth="78.0" style="-fx-background-color: white;">
+      <graphic>
+         <FontAwesomeIcon glyphName="USER" size="2em" />
+      </graphic>
+   </Button>
+   <Button fx:id="btn_settings" layoutX="2.0" mnemonicParsing="false" onAction="#navigation" prefHeight="64.0" prefWidth="78.0" style="-fx-background-color: white;">
+      <graphic>
+         <FontAwesomeIcon glyphName="GEAR" size="2em" />
+      </graphic>
+   </Button>
+</AnchorPane>
 </AnchorPane>
