--- a/src/HealthTracker/settings.fxml
+++ b/src/HealthTracker/settings.fxml
@@ -1,22 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.*?>
-<?import de.jensd.fx.glyphs.fontawesome.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import com.gluonhq.charm.glisten.control.Chip?>
+<?import com.gluonhq.charm.glisten.control.DropdownButton?>
+<?import com.gluonhq.charm.glisten.control.ExpansionPanel?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" fx:id="pane1" maxWidth="-Infinity" minHeight="-Infinity" minWidth="400.0" prefHeight="700.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="HealthTracker.SettingsController">
+
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIcon?>
+<?import javafx.scene.layout.AnchorPane?>
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="HealthTracker.SettingsController">
    <children>
-      <Pane prefHeight="60.0" prefWidth="400.0" style="-fx-background-color: black;">
+      <Pane prefHeight="60.0" prefWidth="400.0" style="-fx-background-color: black;" >
          <children>
-            <Text fx:id="tit1" fill="#f88d00"  layoutX="84.0" layoutY="40.0" strokeType="OUTSIDE" strokeWidth="0.0" text="TRACK">
+            <Text fill="#f88d00" layoutX="84.0" layoutY="40.0" strokeType="OUTSIDE" strokeWidth="0.0" text="TRACK">
                <font>
                   <Font name="System Bold" size="29.0" />
                </font>
             </Text>
-            <Text fx:id="tit2" fill="WHITE" layoutX="185.0" layoutY="40.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SETTINGS">
+            <Text fill="WHITE" layoutX="185.0" layoutY="40.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SETTINGS">
                <font>
                   <Font name="System Bold" size="29.0" />
                </font>
@@ -29,40 +37,68 @@
          </image>
       </ImageView>
       <Separator layoutX="8.0" layoutY="224.0" prefHeight="13.0" prefWidth="379.0" />
-      <Text layoutX="12.0" layoutY="259.0" strokeType="OUTSIDE" fx:id="opt1" strokeWidth="0.0" text="TEXT TO SPEECH" wrappingWidth="149.0">
+      <Chip layoutX="334.0" layoutY="236.0" prefWidth="123.0" style="-fx-background-color: green;">
+         <graphic>
+            <Image url="@montreal-28-round-mirror-glossy-white-mirror-james-martin-vanities-624641_1024x.jpg" />
+         </graphic>
+      </Chip>
+      <Button fx:id="submit" layoutX="135.0" layoutY="580.0" mnemonicParsing="false" prefHeight="41.0" prefWidth="131.0" text="Submit" onAction="#redirect"/>
+      <Text layoutX="12.0" layoutY="259.0" strokeType="OUTSIDE" strokeWidth="0.0" text="TEXT TO SPEECH" wrappingWidth="149.0">
          <font>
-            <Font name="System Bold" size="15.0" />
+            <Font name="System Bold" size="19.0" />
          </font>
       </Text>
-      <Separator layoutX="8.0" layoutY="273.0" prefHeight="13.0" prefWidth="379.0" />
-      <Text layoutX="12.0" layoutY="308.0" strokeType="OUTSIDE" fx:id="opt2" strokeWidth="0.0" text="LARGER FONT" wrappingWidth="149.0">
+      <Separator layoutX="8.0" layoutY="285.0" prefHeight="13.0" prefWidth="379.0" />
+      <Chip  layoutX="334.0" layoutY="285.0" prefWidth="123.0" style="-fx-background-color: green;">
+         <graphic>
+            <Image url="@montreal-28-round-mirror-glossy-white-mirror-james-martin-vanities-624641_1024x.jpg" />
+         </graphic>
+      </Chip>
+      <Text layoutX="12.0" layoutY="314.0" strokeType="OUTSIDE" strokeWidth="0.0" text="LARGER FONT" wrappingWidth="149.0">
          <font>
-            <Font name="System Bold" size="15.0" />
+            <Font name="System Bold" size="19.0" />
          </font>
       </Text>
-      <Separator layoutX="8.0" layoutY="318.0" prefHeight="13.0" prefWidth="379.0" />
-      <Text layoutX="12.0" layoutY="358.0" strokeType="OUTSIDE" fx:id="opt3" strokeWidth="0.0" text="LANGUAGE" wrappingWidth="149.0">
+      <Separator layoutX="8.0" layoutY="327.0" prefHeight="13.0" prefWidth="379.0" />
+      <Text layoutX="12.0" layoutY="358.0" strokeType="OUTSIDE" strokeWidth="0.0" text="LANGUAGE" wrappingWidth="149.0">
          <font>
-            <Font name="System Bold" size="15.0" />
+            <Font name="System Bold" size="19.0" />
          </font>
       </Text>
+      <DropdownButton layoutX="300.0" layoutY="337.0">
+          <items>
+              <MenuItem text="Choice 1" />
+              <MenuItem text="Choice 2" />
+              <MenuItem text="Choice 3" />
+          </items>
+      </DropdownButton>
+      <ExpansionPanel layoutX="111.0" layoutY="431.0" prefHeight="38.0" prefWidth="100.0" />
       <Separator layoutX="8.0" layoutY="372.0" prefHeight="13.0" prefWidth="379.0" />
-      <Text layoutX="10.0" layoutY="408.0" strokeType="OUTSIDE" fx:id="opt4" strokeWidth="0.0" text="DISABLE GOAL OPTION" wrappingWidth="202.0">
+      <Text layoutX="10.0" layoutY="408.0" strokeType="OUTSIDE" strokeWidth="0.0" text="DISABLE GOAL OPTION" wrappingWidth="202.0">
          <font>
-            <Font name="System Bold" size="15.0" />
+            <Font name="System Bold" size="19.0" />
          </font>
       </Text>
+      <Chip layoutX="334.0" layoutY="385.0" prefWidth="123.0" style="-fx-background-color: green;">
+         <graphic>
+            <Image url="@montreal-28-round-mirror-glossy-white-mirror-james-martin-vanities-624641_1024x.jpg" />
+         </graphic>
+      </Chip>
       <Separator layoutX="8.0" layoutY="425.0" prefHeight="13.0" prefWidth="379.0" />
-      <Text layoutX="12.0" layoutY="456.0" strokeType="OUTSIDE" fx:id="opt5"  strokeWidth="0.0" text="PREFERRED UNITS" wrappingWidth="168.0">
+      <Text layoutX="12.0" layoutY="456.0" strokeType="OUTSIDE" strokeWidth="0.0" text="PREFFERED UNITS" wrappingWidth="168.0">
          <font>
-            <Font name="System Bold" size="15.0" />
+            <Font name="System Bold" size="19.0" />
          </font>
       </Text>
+      <DropdownButton layoutX="298.0" layoutY="437.0" prefHeight="27.0" prefWidth="90.0">
+         <items>
+            <MenuItem text="Choice 1" />
+            <MenuItem text="Choice 2" />
+            <MenuItem text="Choice 3" />
+         </items>
+      </DropdownButton>
       <Separator layoutX="8.0" layoutY="469.0" prefHeight="13.0" prefWidth="379.0" />
-      <ComboBox fx:id="cbx2" layoutX="268.0" layoutY="435.0" prefHeight="27.0" prefWidth="110.0" promptText="Kilometers" />
-      <ComboBox fx:id="cbx1" layoutX="268.0" layoutY="337.0" prefHeight="27.0" prefWidth="110.0" promptText="English" />
-
-      <AnchorPane layoutY="636.0" prefHeight="64.0" prefWidth="400.0" BorderPane.alignment="CENTER">
+      <AnchorPane prefHeight="64.0" prefWidth="400.0" layoutY="636.0">
          <Button fx:id="btn_group" layoutX="327.0" mnemonicParsing="false" onAction="#redirect" prefHeight="64.0" prefWidth="78.0" style="-fx-background-color: white;">
             <graphic>
                <FontAwesomeIcon glyphName="GROUP" size="2em" text="" />
@@ -89,8 +125,5 @@
             </graphic>
          </Button>
       </AnchorPane>
-      <JFXToggleButton fx:id="tgl1" onAction="#tglAct1" layoutX="275.0" layoutY="222.0" mnemonicParsing="false" prefHeight="60.0"  prefWidth="110.0" text=" " />
-      <JFXToggleButton fx:id="tgl2"  onAction="#tglAct2" layoutX="293.0" layoutY="271.0"  mnemonicParsing="false" text=" " />
-      <JFXToggleButton fx:id="tgl3"  onAction="#tglAct3" layoutX="293.0" layoutY="371.0" mnemonicParsing="false" text=" " />
    </children>
 </Pane>
