--- a/src/HealthTracker/calories.fxml
+++ b/src/HealthTracker/calories.fxml
@@ -1,45 +1,78 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import de.jensd.fx.glyphs.fontawesome.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.shape.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="a_pane" prefHeight="700.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="HealthTracker.Calories">
+<AnchorPane fx:id="a_pane" prefHeight="700.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="HealthTracker.CaloriesController">
     <BorderPane prefHeight="700.0" prefWidth="400.0">
         <top>
             <AnchorPane fx:id="banner" prefHeight="64.0" prefWidth="400.0" style="-fx-background-color: black;" BorderPane.alignment="CENTER">
-                    <Text fx:id="title" fill="#ff660e" layoutX="14.0" layoutY="45.0" strokeType="OUTSIDE" strokeWidth="0.0" text="TRACK">
+                    <Text fx:id="track" fill="#ff660e" layoutX="14.0" layoutY="45.0" strokeType="OUTSIDE" strokeWidth="0.0" text="TRACK">
                         <font>
                             <Font name="System Bold Italic" size="33.0" />
                         </font>
                     </Text>
-                    <Text fx:id="page_name" fill="WHITE" layoutX="133.0" layoutY="41.0" strokeType="OUTSIDE" strokeWidth="0.0" text="CALORIES">
+                    <Text fx:id="p_name" fill="WHITE" layoutX="132.0" layoutY="42.0" strokeType="OUTSIDE" strokeWidth="0.0" text="CALORIES">
                         <font>
                             <Font name="System Bold" size="25.0" />
                         </font>
                     </Text>
             </AnchorPane>
         </top>
+        <bottom>
+            <AnchorPane prefHeight="64.0" prefWidth="400.0" BorderPane.alignment="CENTER">
+                <children>
+                    <Button fx:id="btn_group" layoutX="327.0" mnemonicParsing="false" onMouseClicked="#navigation" prefHeight="64.0" prefWidth="78.0" style="-fx-background-color: white;">
+                        <graphic>
+                            <FontAwesomeIcon glyphName="GROUP" size="2em" text="" />
+                        </graphic>
+                    </Button>
+                    <Button fx:id="btn_workouts" layoutX="248.0" mnemonicParsing="false" onMouseClicked="#navigation" prefHeight="64.0" prefWidth="78.0" style="-fx-background-color: white;">
+                        <graphic>
+                            <FontAwesomeIcon glyphName="BICYCLE" onMouseClicked="#navigation" size="2em" text="" />
+                        </graphic>
+                    </Button>
+                    <Button fx:id="btn_home" layoutX="160.0" mnemonicParsing="false" onMouseClicked="#navigation" prefHeight="64.0" prefWidth="88.0" style="-fx-background-color: orange;">
+                        <graphic>
+                            <FontAwesomeIcon glyphName="HOME" size="2em" text="" />
+                        </graphic>
+                    </Button>
+                    <Button fx:id="btn_user" layoutX="81.0" mnemonicParsing="false" onMouseClicked="#navigation" prefHeight="64.0" prefWidth="78.0" style="-fx-background-color: white;">
+                        <graphic>
+                            <FontAwesomeIcon glyphName="USER" size="2em" />
+                        </graphic>
+                    </Button>
+                    <Button fx:id="btn_settings" layoutX="2.0" mnemonicParsing="false" onMouseClicked="#navigation" prefHeight="64.0" prefWidth="78.0" style="-fx-background-color: white;">
+                        <graphic>
+                            <FontAwesomeIcon glyphName="GEAR" size="2em" />
+                        </graphic>
+                    </Button>
+                </children>
+            </AnchorPane>
+        </bottom>
       <center>
          <Pane fx:id="content" prefHeight="500.0" prefWidth="400.0" BorderPane.alignment="CENTER">
             <children>
-               <Line endX="174.39999389648438" layoutX="197.0" layoutY="292.0" startX="-168.60000610351562" />
-               <Button layoutX="173.0" layoutY="419.0" mnemonicParsing="false" text="Submit" />
+               <Line fx:id="line" endX="174.39999389648438" layoutX="197.0" layoutY="292.0" startX="-168.60000610351562" />
+               <Button fx:id="submit" layoutX="173.0" layoutY="419.0" mnemonicParsing="false" text="Submit" />
                <TextField fx:id="text_field" layoutX="56.0" layoutY="374.0" prefHeight="25.0" prefWidth="287.0" />
-               <Text layoutX="152.0" layoutY="332.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Calories">
-                  <font>
-                     <Font size="27.0" />
-                  </font>
-               </Text>
-               <Text layoutX="93.0" layoutY="352.0" strokeType="OUTSIDE" strokeWidth="0.0" text="How many calories have you had today?" />
-               <ImageView fitHeight="159.0" fitWidth="205.0" layoutX="97.0" layoutY="69.0" pickOnBounds="true" preserveRatio="true">
+               <ImageView fx:id="img" fitHeight="159.0" fitWidth="205.0" layoutX="97.0" layoutY="69.0" pickOnBounds="true" preserveRatio="true">
                   <image>
                      <Image url="@../../../../../Pictures/dinner-plate-md.png" />
                   </image>
                </ImageView>
-            </children></Pane>
+               <Label fx:id="heading" layoutX="159.0" layoutY="303.0" text="Calories">
+                  <font>
+                     <Font size="25.0" />
+                  </font>
+               </Label>
+               <Label fx:id="sub_text" layoutX="96.0" layoutY="339.0" text="How many calories have you had today?" />
+            </children>
+         </Pane>
       </center>
     </BorderPane>
 </AnchorPane>
