SubmitCalories method added

--- a/src/HealthTracker/calories.fxml
+++ b/src/HealthTracker/calories.fxml
@@ -59,7 +59,7 @@
                 <children>
                     <Line fx:id="line" endX="174.39999389648438" layoutX="197.0" layoutY="292.0" startX="-168.60000610351562" />
                     <Button fx:id="submit" layoutX="162.0" layoutY="426.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="76.0" text="Submit" />
-                    <TextField fx:id="text_field" layoutX="56.0" layoutY="374.0" prefHeight="25.0" prefWidth="220.0" promptText="Calories" />
+                    <TextField fx:id="text_field" layoutX="56.0" layoutY="374.0" prefHeight="25.0" prefWidth="220.0" promptText="Calories(Kcal)" />
                     <ImageView fx:id="img" fitHeight="159.0" fitWidth="205.0" layoutX="97.0" layoutY="69.0" pickOnBounds="true" preserveRatio="true">
                   <image>
                      <Image url="@../Img/dinner-plate-md.jpg" />
